@@ -12,6 +12,7 @@ import org.junit.jupiter.api.Test;
 
 import com.devonfw.tools.ide.context.AbstractIdeContextTest;
 import com.devonfw.tools.ide.context.IdeTestContext;
+import com.devonfw.tools.ide.io.FileAccess;
 import com.devonfw.tools.ide.variable.IdeVariables;
 
 /**
@@ -63,6 +64,38 @@ public class MvnTest extends AbstractIdeContextTest {
     // assert
     assertThat(context).logAtInfo().hasMessage("mvn " + "foo bar");
     checkInstallation(context);
+  }
+
+  /**
+   * Tests if mvn run will use a mvn wrapper file if it was found within a valid cwd containing a pom.xml.
+   */
+  @Test
+  public void testMvnRunWithFoundWrapper() {
+    // arrange
+    IdeTestContext context = newContext(PROJECT_MVN);
+    context.setAnswers("testLogin", "testPassword");
+    FileAccess fileAccess = context.getFileAccess();
+    Mvn mvn = context.getCommandletManager().getCommandlet(Mvn.class);
+    Path projectWithoutMvnw = context.getWorkspacePath().resolve("project-without-mvnw");
+    fileAccess.mkdirs(projectWithoutMvnw);
+    context.setCwd(projectWithoutMvnw, "main", context.getIdeHome());
+
+    mvn.arguments.addValue("foo");
+    mvn.arguments.addValue("bar");
+    mvn.install();
+    // create a pom.xml in a directory with no mvn wrapper file to trigger directory traversal
+    fileAccess.touch(projectWithoutMvnw.resolve("pom.xml"));
+    // copy the mvn wrapper file into the workspace
+    fileAccess.copy(mvn.getToolBinPath().resolve("mvnw"), context.getWorkspacePath());
+    // create a pom.xml next to the mvn wrapper file
+    fileAccess.touch(context.getWorkspacePath().resolve("pom.xml"));
+
+    // act
+    mvn.run();
+
+    // assert
+    assertThat(context).logAtDebug().hasMessage("Using mvn wrapper file at: " + context.getWorkspacePath());
+    assertThat(context).logAtInfo().hasMessage("mvnw " + "foo bar");
   }
 
   private void checkInstallation(IdeTestContext context) throws IOException {
