@@ -1,0 +1,9 @@
+#!/bin/bash
+
+if [ "$1" == "--encrypt-master-password" ]; then
+    echo "masterPassword"
+elif [ "$1" == "--encrypt-password" ]; then
+    echo "$2"
+else
+    echo "mvnw $*"
+fi
